高德路况组件改成只用ImageCanvas渲染

--- a/src/stories/VGroupLayer.mdx
+++ b/src/stories/VGroupLayer.mdx
@@ -9,7 +9,7 @@ import * as VGroupLayer from "./VGroupLayer.stories";
 图层组
 
 ```js
-import { VMap, VGroupLayer } from "v-ol-map";
+import { VMap, VGroupLayer, VTile, VVector } from "v-ol-map";
 ```
 
 <Canvas of={VGroupLayer.Default} />
