--- a/src/stories/VVector.mdx
+++ b/src/stories/VVector.mdx
@@ -19,7 +19,7 @@ import { VMap, VVector } from "v-ol-map";
 > 要素可编辑
 
 ```js
-import { VMap, VVector, VTile } from "vectors";
+import { VMap, VVector, VTile } from "v-ol-map";
 ```
 
 <Canvas of={VVector.Modify} />
