chore(build): 更新版本号，新增部署脚本及Storybook排序配置
- 将版本号从1.19.2更新至1.19.3
- 在package.json添加ssh-deploy脚本，实现ssh部署功能
- 在jsconfig.json中增加路径别名"v-ol-map"指向src/packages/index.js
- 在storybook配置中加入storySort函数，支持自定义故事排序
- 升级pnpm依赖锁文件，更新部分依赖版本和新增依赖包

--- a/src/stories/VGroupLayer.mdx
+++ b/src/stories/VGroupLayer.mdx
@@ -6,11 +6,15 @@ import * as VGroupLayer from "./VGroupLayer.stories";
 
 # v-group-layer
 
-图层组
+图层组组件，用于将多个图层组合在一起统一管理。
 
 ```js
 import { VMap, VGroupLayer, VTile, VVector } from "v-ol-map";
 ```
+
+## 基础示例
+
+> 图层组包含多个矢量图层，可统一控制可见性和透明度
 
 <Canvas of={VGroupLayer.Default} />
 
