refactor(route): 修改绑定地图属性名称并更新事件名称
- 将 route 组件中绑定地图属性由 bindOlMap 改为 map
- 更新事件名称 bindOnRender 为 render，规范事件命名
- 调整父组件调用时参数对应改为 map，保持统一命名

chore(stories): 新增并更新多个故事示例文档展示

- VMap 增加多地图和地图方法示例及对应故事配置
- VTile 新增鹰眼图和遮罩层示例及故事配置
- VVector 添加 Feature 鼠标悬停交互示例及故事配置
- 修改 TileXYZExample 默认瓦片 URL 和投影，调整为ESPG:3857

refactor(echarts): 清理 ECharts 组件注释和依赖

- 移除 nanoid 导入和无用注释
- 简化组件描述为基于 ol-echarts 的 ECharts 图层组件

--- a/src/stories/VMap.mdx
+++ b/src/stories/VMap.mdx
@@ -18,6 +18,14 @@ import { VMap, VTile } from "v-ol-map";
 
 <Canvas of={VMap.Default} />
 
+## 多地图示例
+
+<Canvas of={VMap.MultiMap} />
+
+## 地图方法示例
+
+<Canvas of={VMap.MapMethods} />
+
 ## Docs
 
 <Controls />
