--- a/src/stories/VTile.mdx
+++ b/src/stories/VTile.mdx
@@ -30,6 +30,14 @@ import { VMap, VTile } from "v-ol-map";
 
 <Canvas of={VTile.WMS} />
 
+## 鹰眼图
+
+<Canvas of={VTile.overviewMap} />
+
+## 遮罩层
+
+<Canvas of={VTile.TileMask} />
+
 ## Docs
 
 <Controls />
