--- a/src/stories/VVector.mdx
+++ b/src/stories/VVector.mdx
@@ -30,6 +30,10 @@ import { VMap, VVector, VTile } from "v-ol-map";
 
 <Canvas of={VVector.GeoJsonBasic} />
 
+## 鼠标交互改变要素样式示例
+
+<Canvas of={VVector.FeatureHover} />
+
 ## Docs
 
 <Controls />
