feat(example): 优化地图方法示例与图像图层示例
- 迁移路由首页组件路径，更新至Home目录
- ImageLayer属性直接传入props，简化代码
- Image示例使用本地静态图片资源与更新范围坐标
- 新增GeoImage图层示例及对应文档说明
- 完善MapMethods示例，新增视图移动、缩放、适应范围、导出、测距功能按钮
- 优化MapMethods示例样式，提升交互体验和信息展示
- 刷新示例导入路径，确保依赖统一来自v-ol-map包
- 更新Story文档，增加功能点描述与源码展示

--- a/src/stories/VImage.mdx
+++ b/src/stories/VImage.mdx
@@ -12,11 +12,17 @@ import * as VImage from "./VImage.stories";
 import { VMap, VTile, VImage } from "v-ol-map";
 ```
 
-## 基础示例
+## 图像叠加示例（Static Image）
 
 > 在指定地理范围内显示静态图片
 
 <Canvas of={VImage.Default} />
+
+## 图像叠加示例（GeoImage）
+
+> 基于 `ol-ext/layer/GeoImage` 的图像叠加示例
+
+<Canvas of={VImage.ImageGeo} />
 
 ## WMS 示例
 
