--- a/src/stories/VMap.mdx
+++ b/src/stories/VMap.mdx
@@ -24,6 +24,8 @@ import { VMap, VTile } from "v-ol-map";
 
 ## 地图方法示例
 
+> 展示 panTo、flyTo、setZoom、fit、exportPNG 等常用方法
+
 <Canvas of={VMap.MapMethods} />
 
 ## Docs
