docs(stories): 统一示例代码块语言标记为 html，修复脚本缩进错误
- 将 VOverlay、VPath、VRoute 示例中的代码块语言标记从 vue 修改为 html
- 规范导出对象的缩进和大括号格式，修复 data 和 methods 中部分格式问题
- 保持示例代码风格一致，提升文档可读性和正确性
- 删除无用脚本符号，确保示例可正常执行

--- a/src/stories/VRoute.mdx
+++ b/src/stories/VRoute.mdx
@@ -9,7 +9,7 @@ import * as VRouteStories from "./VRoute.stories";
 
 ## 基础用法
 
-```vue
+```html
 <template>
   <v-map :view="viewOptions">
     <v-tile tile-type="TD" />
@@ -24,26 +24,26 @@ import * as VRouteStories from "./VRoute.stories";
 </template>
 
 <script>
-export default {
-  data() {
-    return {
-      stops: [
-        [118.08, 24.47],
-        [118.1, 24.49],
-      ],
-      routeStyle: {
-        line: { stroke: { color: "rgba(24, 144, 255, 0.8)", width: 6 } },
-        start: { circle: { radius: 12, fill: { color: "#52c41a" } } },
-        end: { circle: { radius: 12, fill: { color: "#f5222d" } } },
-      },
-    };
-  },
-  methods: {
-    onRouteRender(routeData, map, features) {
-      console.log("路径规划完成", routeData);
+  export default {
+    data() {
+      return {
+        stops: [
+          [118.08, 24.47],
+          [118.1, 24.49],
+        ],
+        routeStyle: {
+          line: { stroke: { color: "rgba(24, 144, 255, 0.8)", width: 6 } },
+          start: { circle: { radius: 12, fill: { color: "#52c41a" } } },
+          end: { circle: { radius: 12, fill: { color: "#f5222d" } } },
+        },
+      };
     },
-  },
-};
+    methods: {
+      onRouteRender(routeData, map, features) {
+        console.log("路径规划完成", routeData);
+      },
+    },
+  };
 </script>
 ```
 
