--- a/src/stories/VOverlay.mdx
+++ b/src/stories/VOverlay.mdx
@@ -9,7 +9,7 @@ import * as VOverlayStories from "./VOverlay.stories";
 
 ## 基础用法
 
-```vue
+```html
 <template>
   <v-map :view="viewOptions">
     <v-overlay :position="[118.08, 24.47]" positioning="bottom-center" :offset="[0, -10]">
@@ -26,7 +26,7 @@ import * as VOverlayStories from "./VOverlay.stories";
 
 通过设置 `position` 为 `undefined` 来隐藏覆盖物：
 
-```vue
+```html
 <template>
   <v-map :view="viewOptions">
     <v-overlay :position="showPopup ? coords : undefined">
@@ -36,14 +36,14 @@ import * as VOverlayStories from "./VOverlay.stories";
 </template>
 
 <script>
-export default {
-  data() {
-    return {
-      showPopup: false,
-      coords: [118.08, 24.47],
-    };
-  },
-};
+  export default {
+    data() {
+      return {
+        showPopup: false,
+        coords: [118.08, 24.47],
+      };
+    },
+  };
 </script>
 ```
 
