--- a/src/stories/VPath.mdx
+++ b/src/stories/VPath.mdx
@@ -9,7 +9,7 @@ import * as VPathStories from "./VPath.stories";
 
 ## 基础用法
 
-```vue
+```html
 <template>
   <v-map :view="viewOptions">
     <v-tile tile-type="TD" />
@@ -18,35 +18,35 @@ import * as VPathStories from "./VPath.stories";
 </template>
 
 <script>
-export default {
-  data() {
-    return {
-      pathData: [
-        { longitude: 118.08, latitude: 24.47, gnssTime: 1640000000000 },
-        { longitude: 118.09, latitude: 24.48, gnssTime: 1640000005000 },
-        // ... 更多轨迹点
-      ],
-      pathOptions: {
-        lineColor: "rgba(24, 144, 255, 0.8)",
-        lineWidth: 6,
-        passlineColor: "#52c41a",
-        passlineWidth: 4,
+  export default {
+    data() {
+      return {
+        pathData: [
+          { longitude: 118.08, latitude: 24.47, gnssTime: 1640000000000 },
+          { longitude: 118.09, latitude: 24.48, gnssTime: 1640000005000 },
+          // ... 更多轨迹点
+        ],
+        pathOptions: {
+          lineColor: "rgba(24, 144, 255, 0.8)",
+          lineWidth: 6,
+          passlineColor: "#52c41a",
+          passlineWidth: 4,
+        },
+      };
+    },
+    methods: {
+      onLoad(pathObj) {
+        // 开始播放
+        this.$refs.pathRef.start();
       },
-    };
-  },
-  methods: {
-    onLoad(pathObj) {
-      // 开始播放
-      this.$refs.pathRef.start();
+      onMove(e) {
+        console.log("当前位置索引:", e.currentIndex);
+      },
+      onEnd() {
+        console.log("播放结束");
+      },
     },
-    onMove(e) {
-      console.log("当前位置索引:", e.currentIndex);
-    },
-    onEnd() {
-      console.log("播放结束");
-    },
-  },
-};
+  };
 </script>
 ```
 
