feat(stories): 增强 GeoJson 示例和更新组件用法
- 修改 GeoJson 示例中的底图类型为“BD”
- 新增多边形要素及其样式配置
- 在 VVector 组件故事中增加圆形、多边形和线条示例要素
- 更新 VVector.mdx 文档，调整编辑模式与 GeoJSON 基础示例顺序
- 在故事中加入 VTile 组件以支持底图渲染
- 移除 group 图层组件中的多余注释，提高代码整洁度

--- a/src/stories/VVector.mdx
+++ b/src/stories/VVector.mdx
@@ -18,17 +18,19 @@ import { VMap, VVector, VTile } from "v-ol-map";
 
 <Canvas of={VVector.Default} />
 
+## GeoJSON 基础示例
+
+> 使用 GeoJSON 数据生成要素，支持要素级别样式(优先级高于图层样式)和图层统一样式。
+>
+> 直接使用 GeoJSON 很方便，**但 GeoJSON 标准不支持 Circle 几何类型。**
+
+<Canvas of={VVector.GeoJsonBasic} />
+
 ## Modify 编辑模式
 
 > 要素可编辑，启用后可拖拽要素移动位置
 
 <Canvas of={VVector.Modify} />
-
-## GeoJSON 基础示例
-
-> 使用 GeoJSON 数据生成要素，支持要素级别样式和图层统一样式
-
-<Canvas of={VVector.GeoJsonBasic} />
 
 ## 鼠标交互改变要素样式示例
 
